# UltimateALPR

./: .gitignore  CMakeLists.txt  readme.md
alpr_config/: search_area.txt  settings.txt
src/: main.cpp
src/cardetection/: blob.cpp  blob.h  cardetection.cpp  cardetection.h  uuid.h
src/core/: PlateWorker copy.cpp  PlateWorker.cpp  PlateWorker.h  Worker.cpp  Worker.h
src/platerecognizer/: DetectChars.cpp  DetectChars.h  DetectPlates.cpp  DetectPlates.h  Preprocess.cpp  defines.h  recognizertool.cpp  recognizertool.h
